# rusty-git

./: Cargo.toml  README.md
examples/: cat-file.rs  head.rs  open.rs  refs.rs
src/: lib.rs  object.rs  parse.rs  reference.rs  repository.rs
src/object/: blob.rs  commit.rs  database.rs  parse.rs  parser.rs  signature.rs  tag.rs  tree.rs
src/object/database/: loose.rs  packed.rs  reader.rs
src/object/database/packed/: delta.rs  index.rs  pack.rs
src/parse/: buffer.rs  parser.rs
src/reference/: database.rs  direct.rs  parser.rs  symbolic.rs
tests/: pack.rs  tag.rs  tests.rs
tests/common/: mod.rs
tests/resources/repo.git/: COMMIT_EDITMSG  packed-refs
tests/resources/repo.git/info/: refs
tests/resources/repo.git/logs/: HEAD
tests/resources/repo.git/objects/info/: commit-graph  packs
tests/resources/repo.git/objects/pack/: pack-570c9f2183ceba36aaf51e7f604467f6495a218e.idx  pack-570c9f2183ceba36aaf51e7f604467f6495a218e.pack
tests/resources/repo.git/refs/heads/: master
