[package]
name = "rusty-git"
description = "rusty-git."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/rusty-git"
documentation = "https://docs.rs/rusty-git"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]