[package]
name = "rusty-git"
description = "rusty-git."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/rusty-git"
documentation = "https://docs.rs/rusty-git"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
thiserror = "1"
flate2 = "1"
regex = "1"
once_cell = "1"
hex = "0.4.2"
sha-1 = "0.9.1"
fs-err = "2.3.0"
memchr = "2.3.3"
bstr = "0.2.13"
filetime = "0.2.12"

[dev-dependencies]
anyhow = "1"
structopt = "0.3.16"
tempdir = "0.3.7"
git2 = "0.13.8"
proptest = "0.10.0"
